Bug fixes.  1) Order report was not printing and did not have the delivery zone; 2) Items could not be updated; 3) table cells had too much spacing.

--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -21,10 +21,11 @@
     margin-right: 10px;
 }
 #page #content .col-2 {
-    width: 900px;
+    width: 800px;
     min-height: 500px;
 }
 
 #footer {
-    height: 89px;
+    margin-left: 200px;
+    height: 75px;
 }
