--- a/web/css/style.css
+++ b/web/css/style.css
@@ -140,7 +140,7 @@ form input.submit-left {
     float: left;
     color: #4c7cbd;
     margin-left: 5px;
-    width: 70px;
+    width: 90px;
     font-weight: bold;
 }
 .errors {
@@ -212,16 +212,16 @@ form input.submit-left {
     width: 100%;
 }
 #twocolwrapper {
-    margin-right: 200px;
+    margin-right: 150px;
 }
 #column1 {
     float: left;
-    width: 100%;
+    width: 75%;
     background-color: #FFA;
 }
 #sidebar {
   float: right;
-  width: 200px;
+  width: 300px;
   margin-right: -200px;
   background-color: #CCF;
 }
@@ -268,10 +268,10 @@ table.detail {
     margin-bottom: 20px;
 }
 table.detail th {
-    text-align: left;
+    text-align: center;
 }
 table.detail td {
-    padding: 2px 14px;
+    padding: 2px 6px;
 }
 
 .icon {
